--- a/service1/application/templates/home.html
+++ b/service1/application/templates/home.html
@@ -1,12 +1,13 @@
 <html>
     <body>
-        <h1>Pokemon</h1>>
+        <h1>Pokemon Collection</h1>>
+        <br>
         <br>
         <p>Pokemon: {{ Pokemons }}</p> 
         <br>
-        <p>Pokemon type is: {{ type }}</p>
+        <p>The rarity of your {{Pokemons}} is:  {{ rarities }}</p>
         <br>
-        <p>Your Pokemon is a {{ Pokemons }}. Which is a {{ type }} type with level {{ level }}</p>
+        <p>Your {{Pokemons}} is level:  {{ level }}</p>
         <br>
     </body>    
 </html>>
