--- a/service1/application/templates/home.html
+++ b/service1/application/templates/home.html
@@ -1,11 +1,11 @@
 <html>
-    <body>
+    <body style="background-color: red;">
         <h1>Pokemon Collection</h1>>
         <br>
         <br>
         <p>Pokemon: {{ Pokemons }}</p> 
         <br>
-        <p>The rarity of your {{Pokemons}} is:  {{ rarities }}</p>
+        <p>The rarity of your {{Pokemons}} is:  {{ Rarity }}</p>
         <br>
         <p>Your {{Pokemons}} is level:  {{ level }}</p>
         <br>
