--- a/service1/application/templates/home.html
+++ b/service1/application/templates/home.html
@@ -3,9 +3,9 @@
         <h1>Pokemon Collection</h1>>
         <br>
         <br>
-        <p>Pokemon: {{ Pokemons }}</p> 
+        <p>You have got a {{ Pokemons }}</p> 
         <br>
-        <p>The rarity of your {{Pokemons}} is:  {{ Rarity }}</p>
+        <p>Your {{Pokemons}} is in the {{ Rarity }} class</p>
         <br>
         <p>Your {{Pokemons}} is level:  {{ level }}</p>
         <br>
